# check-spdx-header

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  release.sh
.github/: renovate.json
.github/workflows/: pre-commit-update.yml  python-tests.yml  test.yml
src/check_spdx_header/: __init__.py  __main__.py
src/check_spdx_header/cli/: __init__.py
src/check_spdx_header/util/: __init__.py
tests/check_spdx_header/: cli_test.py  util_test.py
